# tweet-critic

./: pyproject.toml  test.ipynb
