[project]
name = "tweet-critic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.12",
    "langchain-anthropic>=0.1.4",
    "langchainhub>=0.1.15",
    "langsmith>=0.1.26",
    "python-dotenv>=1.1.1",
    "streamlit>=1.32.2",
    "streamlit-feedback>=0.1.4",
]
